trunk/Archive2/ca/836790d6c72a81/output
main.cpp:1:13: error: 'Level' does not name a type
             Level   Stats   DivLevel    Base    OverBase   Relative
             ^
