trunk/Archive2/ca/836790d6c72a81/main.cpp
            Level   Stats   DivLevel    Base    OverBase   Relative
Feraligatr  43      623     14.488      530     0.027336
Onix        41      458     11.170      385     0.029014  +6.139%
Haunter     41      463     11.292      405     0.027883  +1.999%
Growlithe   38      389     10.236      350     0.029248  +6.992%